# pbdRPC

./: .gitignore  .travis.yml  ChangeLog  DESCRIPTION  INSTALL  NAMESPACE  README.md  TODO  cleanup  configure  configure.ac
R/: 111_control.r  222_export_env.r  222_export_opt.r  find_plink.r  get_conf.r  machine.r  pbdRPC-package.r  rpc.r  rpc_cs_example.r  rpc_options.r  rpc_pid.r  rpc_rr_example.r  srpc.r  ssh_plink.r  tunnel.r  utils.r  zzz.r
inst/: CITATION
inst/doc/: pbdRPC-guide.Rnw
man/: a0_b_control.Rd  a0_c_options.Rd  find_plink.Rd  machine.Rd  pbdRPC-package.Rd  print-machine.Rd  rpc.Rd  rpc_cs_example.Rd  rpc_options.Rd  rpc_pid.Rd  rpc_rr_example.Rd  srpc.Rd  ssh_plink.Rd  tunnel.Rd  zz_rpc_control.Rd
src/: Makevars.in  Makevars.win  inc.plink  inc.plink.win  install.libs.R
src/putty/: sshbn.h  timing.c
src/putty/unix/: uxconfig.h
src/putty/windows/: winhandl.c  winnet.c  winshare.c
vignettes/: build_pdf.sh  pbdRPC-guide.Rnw
vignettes/pbdRPC-include/: 01-copyright.tex  02-introduction.tex  03-login_information.tex  04-application_rr.tex  05-application_cs.tex  06-port_forwarding.tex  07-advance_pbdmpi.tex  08-machine_information.tex  99-faq.tex  pbdRPC.bib
